# Apple-Doc-Mcp

./: .gitignore  .xo-config.js  CLAUDE.md  Cargo.toml  LICENSE  PLAN-web-docs-providers.md  README.md  agents.md  clippy.toml  mark.md  test_mcp.ps1  test_query.ps1
.claude/: settings.local.json
.swe-grep-cache/: state.json
Feedback/: .gitignore  README.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/apple-docs-client/: Cargo.toml
crates/apple-docs-client/src/: android.rs  flutter.rs  lib.rs  platform.rs
crates/apple-docs-client/src/cache/: disk.rs  memory.rs  mod.rs
crates/apple-docs-client/src/types/: models.rs
crates/apple-docs-core/: Cargo.toml
crates/apple-docs-core/src/: executor.rs  lib.rs  markdown.rs  state.rs
crates/apple-docs-core/src/services/: design_guidance.rs  knowledge.rs  mod.rs
crates/apple-docs-core/src/tools/: batch_documentation.rs  choose_technology.rs  current_technology.rs  discover.rs  get_documentation.rs  how_do_i.rs  mod.rs  query.rs  search_symbols.rs  switch_platform.rs
crates/apple-docs-core/src/transport/: mod.rs
crates/apple-docs-core/tests/: design_overlay.rs  search.rs
crates/apple-docs-mcp/: Cargo.toml
crates/apple-docs-mcp/src/: lib.rs
crates/apple-docs-mcp/tests/: smoke.rs
crates/docs-mcp/: Cargo.toml
crates/docs-mcp-client/: Cargo.toml
crates/docs-mcp-client/src/: lib.rs
crates/docs-mcp-client/src/cache/: disk.rs  stats.rs
crates/docs-mcp-client/src/types/: mod.rs  models.rs
crates/docs-mcp-core/: Cargo.toml
crates/docs-mcp-core/src/: lib.rs  state.rs
crates/docs-mcp-core/src/services/: design_guidance.rs  mod.rs
crates/docs-mcp-core/src/tools/: batch_documentation.rs  choose_technology.rs  current_technology.rs  discover.rs  get_documentation.rs  how_do_i.rs  mod.rs  query.rs  search_symbols.rs  submit_feedback.rs
crates/docs-mcp-core/src/transport/: mod.rs
crates/docs-mcp-core/tests/: design_overlay.rs  search.rs
crates/docs-mcp/src/: lib.rs
crates/docs-mcp/tests/: smoke.rs
crates/multi-provider-client/: Cargo.toml
crates/multi-provider-client/examples/: test_providers.rs
crates/multi-provider-client/src/: lib.rs  types.rs
crates/multi-provider-client/src/claude_agent_sdk/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/cocoon/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/cuda/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/gamedev/: client.rs  types.rs
crates/multi-provider-client/src/huggingface/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/mdn/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/metal/: client.rs  types.rs
crates/multi-provider-client/src/mlx/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/quicknode/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/rust/: client.rs  html_parser.rs  mod.rs  types.rs
crates/multi-provider-client/src/telegram/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/ton/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/vertcoin/: client.rs  mod.rs  types.rs
crates/multi-provider-client/src/web_frameworks/: client.rs  mod.rs  types.rs
