[package]
name = "apple-docs-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
apple-docs-mcp = {path = "../../crates/apple-docs-mcp"}
anyhow = {workspace = true}
config = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
