[package]
name = "apple-docs-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
apple-docs-mcp = {path = "../../crates/apple-docs-mcp"}
apple-docs-core = {path = "../../crates/apple-docs-core"}
anyhow = {workspace = true}
config = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {version = "4.5", features = ["derive"]}
clap_complete = "4.5"
indicatif = "0.17"
serde = {workspace = true}
serde_json = {workspace = true}
