[package]
name = "docs-mcp-cli"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
docs-mcp = {path = "../../crates/docs-mcp"}
anyhow = {workspace = true}
config = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
