[package]
name = "apple-docs-mcp"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
apple-docs-core = {path = "../apple-docs-core"}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
insta = {workspace = true}
