[package]
name = "multi-provider-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Multi-provider documentation client for Apple, Telegram, TON, and Cocoon"

[dependencies]
docs-mcp-client = { path = "../docs-mcp-client" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
directories.workspace = true
once_cell.workspace = true
async-trait.workspace = true
urlencoding = "2.1"
scraper = "0.21"
regex = "1.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true

[lints]
workspace = true
